[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Szymon Wojtulewicz <szymon.wojtulewicz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ministark = { git = "https://github.com/andrewmilson/ministark" }
ministark-gpu = { git = "https://github.com/andrewmilson/ministark" }
num-bigint = "0.4"
num-traits = "0.2"
pollster = "0.3.0"
rayon = { version = "1.5", optional = true }
sandstorm = { git = "https://github.com/cartridge-gg/sandstorm" }
sandstorm-binary = { git = "https://github.com/cartridge-gg/sandstorm" }
sandstorm-layouts = { git = "https://github.com/cartridge-gg/sandstorm" }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
structopt = "0.3"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
